# CTP-DOD-in-OOD

./: FINAL TASKS.txt  README.md
ASGEDemo/CTP-DOD-IN-OOD/: CMakeLists.txt
ASGEDemo/CTP-DOD-IN-OOD/src/: CMakeLists.txt
ASGEDemo/CTP-DOD-IN-OOD/src/AllmanLibs/: JobSystem.hpp  MemorySystems.hpp  MemorySystemsInterface.hpp
ASGEDemo/CTP-DOD-IN-OOD/src/game/: Timer.cpp  Timer.h  game.cpp  game.h  main.cpp
ASGEDemo/CTP-DOD-IN-OOD/src/game/GameObjects/: AllmanSquare.cpp  AllmanSquare.h  GameObject.h  Square.cpp  Square.h
ASGEDemo/CTP-DOD-IN-OOD/src/game/Scenes/: BaseScene.h  ConfigurationScene.cpp  ConfigurationScene.h  MenuScene.cpp  MenuScene.h  NoSystemsScene.cpp  NoSystemsScene.h  SystemsScene.cpp  SystemsScene.h
ASGEGame/Angry-birds-2019-master/src/: CMakeLists.txt
ASGEGame/Angry-birds-2019-master/src/game/: game.cpp  game.h  main.cpp
ASGEGame/Angry-birds-2019-master/src/game/Scenes/: BaseScene.h  MenuScene.cpp  MenuScene.h  NoSystemsScene.cpp  NoSystemsScene.h  SystemsScene.cpp  SystemsScene.h
ASGEGame/CTP-DOD-IN-OOD-Demo/: CMakeLists.txt
ASGEGame/CTP-DOD-IN-OOD-Demo/src/: CMakeLists.txt
ASGEGame/CTP-DOD-IN-OOD-Demo/src/game/: game.cpp  game.h
ASGEGame/CTP-DOD-IN-OOD-Demo/src/game/GameObjects/: Square.cpp
ASGEGame/CTP-DOD-IN-OOD-Demo/src/game/Scenes/: BaseScene.h  MenuScene.cpp  MenuScene.h  NoSystemsScene.cpp  NoSystemsScene.h  SystemsScene.cpp  SystemsScene.h
CreativeTechnologyProject/: CreativeTechnologyProject.sln
CreativeTechnologyProject/CreativeTechnologyProject/: CreativeTechnologyProject.vcxproj  CreativeTechnologyProject.vcxproj.filters  imgui.ini  sourceNpcManager.cpp
CreativeTechnologyProject/CreativeTechnologyProject/includes/: AAVariable.h  AllSystemsTest.h  App.h  BaseTest.h  DeltaTimer.h  ExceptionHandler.h  Graphics.h  ImguiManager.h  JobManager.h  JobSystem.hpp  JustJobTest.h  JustMemoryTest.h  Keyboard.h  MemoryAllocator.h  MemoryManager.h  MemorySystems.hpp  MemorySystemsInterface.hpp  Mouse.h  NoSystemsTest.h  Npc.h  NpcManager.cpp  NpcManager.h  NpcNoMem.h  PoolableThread.h  Timer.h  Window.h
CreativeTechnologyProject/CreativeTechnologyProject/libs/imgui/: imgui_impl_dx11.h  imgui_impl_win32.h
CreativeTechnologyProject/CreativeTechnologyProject/source/: AllSystemsTest.cpp  App.cpp  BaseTest.cpp  DeltaTimer.cpp  ExceptionHandler.cpp  Graphics.cpp  ImguiManager.cpp  JobManager.cpp  JustJobTest.cpp  JustMemoryTest.cpp  Keyboard.cpp  Main.cpp  MemoryAllocator.cpp  MemoryManager.cpp  Mouse.cpp  NoSystemsTest.cpp  Npc.cpp  NpcManager.cpp  NpcNoMem.cpp  PoolableThread.cpp  Timer.cpp  WinMain.cpp  Window.cpp
MemoryAllocatorTutorial/: MemoryAllocatorTutorial.sln
MemoryAllocatorTutorial/MemoryAllocatorTutorial/: MemoryAllocatorTutorial.vcxproj  MemoryAllocatorTutorial.vcxproj.filters
MemoryAllocatorTutorial/MemoryAllocatorTutorial/includes/: MemoryAllocator.h  MemoryManager.h
MemoryAllocatorTutorial/MemoryAllocatorTutorial/source/: Main.cpp  MemoryAllocator.cpp  MemoryManager.cpp
